@@ -1,7 +1,8 @@
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
-public class Calculator {
+public class Calculator<T extends Number> {
 
     private List<Double> results;
 
@@ -9,43 +10,47 @@ public class Calculator {
         results = new ArrayList<>();
     }
 
-    public double calculate(double num1, char operator, double num2) {
-        double result = 0;
-        switch (operator) {
-            case '+':
-                result = num1 + num2;
+    public  <T extends Number> Operation<T> getOperation(OperatorType op)
+    {
+
+
+        double r;
+
+        switch (op) {
+            case ADD:
+                return new Addiction<T>();
+            case SUBTRACT:
+                return new Subtraction<T>();
+            case MULTIPLY:
+
                 break;
-            case '-':
-                result = num1 - num2;
-                break;
-            case '*':
-                result = num1 * num2;
-                break;
-            case '/':
-                if (num2 == 0) {
-                    throw new ArithmeticException("Can't divide by zero.");
-                }
-                result = num1 / num2;
+            case DIVIDE:
+
                 break;
             default:
-                System.out.println("Invalid operator. Use +, -, *, /");
-                return 0;
+                throw new UnsupportedOperationException("Unsupported operation.");
         }
-        results.add(result);  // Store the result
-        return result;
+
+
+        return new Addiction<T>();
     }
 
-    // Getter for the results list (returns a copy for encapsulation)
+
     public List<Double> getResults() {
         return new ArrayList<>(results);
     }
 
-    // Method to delete the oldest result
     public void deleteOldestResult() {
         if (!results.isEmpty()) {
-            results.remove(0);
+            results.removeFirst();
         } else {
             System.out.println("No results to delete.");
         }
+    }
+
+    public List<Double> getGreater(double n) {
+        return results.stream()
+                .filter(r -> r > n)
+                .collect(Collectors.toList());
     }
 }
